# bilibum

./: Cargo.toml
src/: config.rs  main.rs  prompt.rs
src/client/: mod.rs  qrcode.rs  qrcode_status.rs  stream.rs  user.rs  video.rs
