[package]
name = "bilibum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10", default-features = false }
indicatif = "0.17"
confy = { version = "0.5", default-features = false, features = ["yaml_conf"] }

chrono = "0.4"

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "cookies", "json"] }
tokio = { version = "1.0", features = ["rt"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

anyhow = "1"
derive_more = "0.99"
async-trait = "0.1"

lazy-regex = "2.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }